--- a/mysite.conf
+++ b/mysite.conf
@@ -1,23 +1,12 @@
 [bodystart]
 <!-- MathJax -->
-<script>
-window.MathJax = {
-  tex: {
-    tags: 'ams'
-  }
-};
-MathJax = {
-  loader: {
-    load: ['input/tex-base', 'output/svg', 'ui/menu', '[tex]/require']
-  },
-  tex: {
-    packages: ['base', 'require']
-  }
-};
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
-
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+	  TeX: { equationNumbers: { autoNumber: "AMS" } }
+});
+</script>
 <!-- End MathJax -->
 </head>
 <body>
